# gstree

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-to-pypi.yml
docs/gstree/: AUDIT_2026-06-15.md
src/gstree/: __init__.py  cli.py  models.py  renderer.py  scanner.py  status.py  upgrade.py
tests/: helpers.py  test_cli.py  test_collect.py  test_renderer.py  test_scanner.py  test_status.py  test_upgrade.py
