[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gstree"
version = "0.1.0"
description = "Workspace git tree scanner"
requires-python = ">=3.12"

[project.scripts]
gstree = "gstree.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
