[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gstree"
dynamic = ["version"]
description = "Workspace git tree scanner"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
gstree = "gstree.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "gstree.__version__"}
