[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gstree"
dynamic = ["version"]
description = "Workspace git tree scanner"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
  {name = "tmsjngx0", email = "tmsjngx0@users.noreply.github.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/tmsjngx0/gstree"
Repository = "https://github.com/tmsjngx0/gstree"
Changelog = "https://github.com/tmsjngx0/gstree/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["ruff"]

[project.scripts]
gstree = "gstree.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "gstree.__version__"}

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
